<resources>
    <string name="app_name">The Quiz</string>

    <!-- Main activity -->
    <string name="loginButtonString">Login</string>
    <string name="createButtonString">New User</string>
    <string name="userCreate">Create User</string>
    <string name="newUserNameText">Choose a username</string>
    <string name="passwordText">Password</string>
    <string name="NewPasswordText">Choose a password</string>
    <string name="emailText">Enter your email</string>

    <!-- Hub activity -->
    <string name="playButton">Play</string>
    <string name="logOutButton">Log Out</string>
    <string name="backendButton">Go to app</string>
    <string name="userCreatedText">You\'ve succefully created a user!</string>
    <string name="backendText">Create your own quiz?\n Use the backend app</string>
    <string name="errorMessageHub">Can\'t find the app on your device</string>

    <!-- Play activity -->
    <string name="Question_text">QuestionText</string>
    <string name="Timer_text">Time left: 10</string>
    <string name="QuestionNr_text">1/10</string>

    <!-- results activity -->
    <string name="playAgainButton_text">Play this quiz again</string>
    <string name="rateQuizButton_text">Rate this quiz</string>
    <string name="results_text">Results:</string>
    <string name="Score_text">100%</string>

    <!-- quizInfo activity -->
    <string name="infoNamn">Awesome quiz</string>
    <string name="infoText">This is an awesome and exiting quiz.</string>
    <string name="intVote">32</string>
    <string name="textVote">has voted</string>
    <string name="intGames">84</string>
    <string name="textGames">has played</string>
    <string name="startQuizButton">Play</string>
    <string name="ratingText">Average Rating</string>

    <!-- quizMain activity -->
    <string name="sortListButton">By Name</string>
    <string name="sortListButton2">By Rating</string>


</resources>
