<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context="adroit.quiz.results">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playAgainButton_text"
        android:background="@drawable/bgbutton"
        android:id="@+id/button3"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="68dp"
        android:onClick="changePageToQuizInfo"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rateQuizButton_text"
        android:textColor="@color/textviewBG"
        android:background="@drawable/bgbuttonresults"
        android:id="@+id/button4"
        android:layout_marginBottom="29dp"
        android:onClick="rateQuiz"
        android:layout_alignBottom="@+id/ratingBar"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignStart="@+id/button3"
        android:layout_alignRight="@+id/button3"
        android:layout_alignEnd="@+id/button3" />

    <TextView
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/results_text"
        android:gravity="center"
        android:background="@drawable/bgresults"
        android:id="@+id/textView"
        android:layout_marginTop="30dp"
        android:focusable="false"
        android:clickable="false"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/editText2"
        android:layout_alignStart="@+id/editText2" />


    <EditText
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText2"
        android:text="@string/Score_text"
        android:background="@drawable/bgpercentage"
        android:textSize="50dp"
        android:textColor="@color/textviewBG"
        android:gravity="center"
        android:layout_marginTop="-3dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:focusable="false"
        android:clickable="false"/>

    <RatingBar
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/ratingBar"
        android:background="@drawable/bgplaytextview"
        android:stepSize="0.1"
        android:paddingLeft="5dp"
        android:paddingTop="10dp"
        android:paddingBottom="100dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>