<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context="adroit.quiz.hub">


    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/gridLayout"></GridLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playButton"
        android:background="@drawable/bgbutton"
        android:id="@+id/button5"
        android:onClick="changePage"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logOutButton"
        android:background="@drawable/bgbutton"
        android:id="@+id/button"
        android:onClick="changePageToMain"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:inputType="textMultiLine"
        android:text="Questions answered: 1000 \nRight answers: 1000 "
        android:gravity="center"
        android:background="@drawable/bghubuserstats"
        android:id="@+id/textView3"
        android:layout_below="@+id/gridLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/textView7" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Användarnamn"
        android:textStyle="bold"
        android:textColor="@color/textviewBG"
        android:gravity="center"
        android:background="@drawable/bghubusername"
        android:id="@+id/textView6"
        android:layout_alignRight="@+id/textView3"
        android:layout_alignEnd="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/gridLayout" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/userCreatedText"
        android:textColor="@color/red"
        android:id="@+id/textView7"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:text="@string/backendButton"
        android:textColor="@color/textviewBG"
        android:background="@drawable/bgbuttonhub"
        android:onClick="changeAppToBackend"
        android:id="@+id/button2"
        android:layout_above="@+id/button5"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/backendText"
        android:gravity="top"
        android:paddingTop="20dp"
        android:paddingBottom="80dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:background="@drawable/bghubuserstats"
        android:id="@+id/textView8"
        android:layout_alignBottom="@+id/button2"
        android:layout_marginBottom="-22dp"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
